Allowed the SAPHRIA line to plot its data. Fixed a few bugs with the averaging calculation including a misunderstanding of the "chunks" and how they relate to frames.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "configuration_file_name = \"test.ifaspkl\"\n",
+    "configuration_file_name = \"./../test.ifaspkl\"\n",
     "alternate_name = None\n",
     "overwrite = True"
    ]
@@ -63,16 +63,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_main.py:54: ImportingWarning: The configuration file could not be properly read. Consider using the factory function. A blank configuration class has been provided instead.\n",
-      "  smeargle_warning(ImportingWarning,(\"The configuration file could not be \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Toto partem non mutant | Do not modify all ##\n",
     "config_class = ifas.yankee.SmeargleConfig(configuration_file_name)"
@@ -145,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It does not serve well to use the entire array for analysis, the `start_chunk` number of frames from the beginning and the `end_chunk` number of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. ``frame_exposure_time`` is the number of seconds each frame is taken for.\n",
+    "It does not serve well to use the entire array for analysis, the `start_chunk` range of frames from the beginning and the `end_chunk` range of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. ``frame_exposure_time`` is the number of seconds each frame is taken for.\n",
     "\n",
     "The same parameters are passed to the kilosecond version (the time conversion is handled natively, mutating the frame_exposure_time component from per second to  per kilosecond)."
    ]
@@ -159,13 +150,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
-      "{'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n"
+      "{'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n",
+      "{'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n"
      ]
     }
    ],
    "source": [
-    "config_class.BravoConfig.avg_endpts_persec_config = {'start_chunk':32, 'end_chunk':32, 'frame_exposure_time':5}\n",
+    "config_class.BravoConfig.avg_endpts_persec_config = {'start_chunk':[100,132], 'end_chunk':[1300,1332], 'frame_exposure_time':5}\n",
     "\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)\n",
@@ -551,12 +542,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plot': False, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n"
+      "{'plot': True, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n"
      ]
     }
    ],
    "source": [
-    "heatmap_configuration = {}\n",
+    "heatmap_configuration = {'plot':True}\n",
     "mpl_heatmap_parameters = {}\n",
     "mpl_colorbar_parameters = {}\n",
     "\n",
@@ -585,12 +576,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plot': False, 'data_array': None, 'histogram_plot_paramters': {}}\n"
+      "{'plot': True, 'data_array': None, 'histogram_plot_paramters': {}}\n"
      ]
     }
    ],
    "source": [
-    "histogram_configuration = {}\n",
+    "histogram_configuration = {'plot':True}\n",
     "mpl_histogram_parameters = {}\n",
     "\n",
     "## Post; nihil se mutare | Do not modify below ##\n",
@@ -661,8 +652,8 @@
       "╓ BravoConfig Parameters:\n",
       "╟  detector_name ⇀ {'name': 'TestArray'}\n",
       "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5]}\n",
-      "╟  avg_endpts_persec_config ⇀ {'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
-      "╟  avg_endpts_perksec_config ⇀ {'start_chunk': 32, 'end_chunk': 32, 'frame_exposure_time': 5}\n",
+      "╟  avg_endpts_persec_config ⇀ {'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n",
+      "╟  avg_endpts_perksec_config ⇀ {'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- BravoConfig >\n",
       "╟  EchoConfig ↴ \n",
@@ -685,8 +676,8 @@
       "╟  OscarConfig ↴ \n",
       "< Configuration Class --- OscarConfig > \n",
       "╓ OscarConfig Parameters:\n",
-      "╟  general_heatmap_config ⇀ {'plot': False, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n",
-      "╟  general_histogram_config ⇀ {'plot': False, 'data_array': None, 'histogram_plot_paramters': {}}\n",
+      "╟  general_heatmap_config ⇀ {'plot': True, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n",
+      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'histogram_plot_paramters': {}}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- OscarConfig >\n",
       "╟  YankeeConfig ↴ \n",
@@ -719,7 +710,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It has finished. A configuration file has been written to test.ifaspkl\n"
+      "It has finished. A configuration file has been written to ./../test.ifaspkl\n"
      ]
     },
     {
@@ -727,7 +718,9 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
-      "  import sys\n"
+      "  import sys\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:220: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
      ]
     }
    ],
