Finished the SA201907281826 reduction pipeline. Issues is the initial conditions and the histogram may be off.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "configuration_file_name = \"./../test.ifaspkl\"\n",
+    "configuration_file_name = \"./../FirstRun.ifaspkl\"\n",
     "alternate_name = None\n",
     "overwrite = True"
    ]
@@ -96,12 +96,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'TestArray'}\n"
+      "{'name': 'Saphria'}\n"
      ]
     }
    ],
    "source": [
-    "config_class.BravoConfig.detector_name = {'name':'TestArray'}\n",
+    "config_class.BravoConfig.detector_name = {'name':'Saphria'}\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "print(config_class.BravoConfig.detector_name)"
    ]
@@ -122,12 +122,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5]}\n"
+      "{'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'begin_garbage': 1, 'archive_data': True}\n"
      ]
     }
    ],
    "source": [
-    "config_class.BravoConfig.voltpat_rename_config = {'voltage_pattern':[2.5,4.5,6.5,8.5,9.5,10.5,11.5,11.5,10.5,9.5,8.5,6.5,4.5,2.5]}\n",
+    "config_class.BravoConfig.voltpat_rename_config = {'voltage_pattern':[2.5,4.5,6.5,8.5,9.5,10.5,11.5,11.5,10.5,9.5,8.5,6.5,4.5,2.5], 'begin_garbage':1, 'archive_data':True}\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "print(config_class.BravoConfig.voltpat_rename_config)"
    ]
@@ -150,13 +150,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n",
-      "{'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n"
+      "{'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
+      "{'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n"
      ]
     }
    ],
    "source": [
-    "config_class.BravoConfig.avg_endpts_persec_config = {'start_chunk':[100,132], 'end_chunk':[1300,1332], 'frame_exposure_time':5}\n",
+    "config_class.BravoConfig.avg_endpts_persec_config\n",
     "\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)\n",
@@ -218,12 +218,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'run': True, 'x_range': [100, 200], 'y_range': [150, 300]}\n"
+      "{'run': False, 'x_range': None, 'y_range': None}\n"
      ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo120_config = {'run': True, 'x_range': [100,200], 'y_range': [150,300]}\n",
+    "config_class.EchoConfig.echo120_config\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "print(config_class.EchoConfig.echo120_config)"
    ]
@@ -336,12 +336,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO 380 Single Pixels: Masks only single pixels specified by a list of coordinate pairs."
+    "ECHO 277 Sigma Truncation: Keeps only pixels within ``sigma_limits`` multiples of the standard deviation and the mean of the data array."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'run': True, 'sigma_limits': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "config_class.EchoConfig.echo277_config = {'run': True, 'sigma_limits': 3}\n",
+    "## Ne mutatus sum ego | Do not modify after ##\n",
+    "print(config_class.EchoConfig.echo277_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ECHO 380 Single Pixels: Masks only single pixels specified by a list of coordinate pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -489,10 +515,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -535,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -569,19 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plot': True, 'data_array': None, 'histogram_plot_paramters': {}}\n"
+      "{'plot': True, 'data_array': None, 'histogram_plot_paramters': {}, 'bin_width': 5}\n"
      ]
     }
    ],
    "source": [
-    "histogram_configuration = {'plot':True}\n",
+    "histogram_configuration = {'plot':True,'bin_width':5}\n",
     "mpl_histogram_parameters = {}\n",
     "\n",
     "## Post; nihil se mutare | Do not modify below ##\n",
@@ -606,18 +630,29 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# ZULU Configuration Parameters\n",
+    "\n",
+    "The ZULU line is built to mostly hold reduction methods that are more finely curtailed. This class contains the customization parameters needed. However, because of the sheer number of custom lines that are possible, none of the them will be listed here. Instead, the user of the software is expected to input it manually in the cells below.\n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "setattr(config_class.ZuluConfig,'SA201907281826',{})\n",
+    "\n",
+    "config_class.ZuluConfig.SA201907281826['early_frame'] = 3\n",
+    "config_class.ZuluConfig.SA201907281826['ref_frame'] = np.array([17,32], dtype=int)\n",
+    "config_class.ZuluConfig.SA201907281826['sub_avg_frames'] = np.array([(257,272), (513,528), (1025,1040)])#, (2049,2064), (4097,4112)], dtype=int)\n",
+    "config_class.ZuluConfig.SA201907281826['frame_exposure'] = 5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -637,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -650,21 +685,22 @@
       "╟  BravoConfig ↴ \n",
       "< Configuration Class --- BravoConfig > \n",
       "╓ BravoConfig Parameters:\n",
-      "╟  detector_name ⇀ {'name': 'TestArray'}\n",
-      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5]}\n",
-      "╟  avg_endpts_persec_config ⇀ {'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n",
-      "╟  avg_endpts_perksec_config ⇀ {'start_chunk': [100, 132], 'end_chunk': [1300, 1332], 'frame_exposure_time': 5}\n",
+      "╟  detector_name ⇀ {'name': 'Saphria'}\n",
+      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'begin_garbage': 1, 'archive_data': True}\n",
+      "╟  avg_endpts_persec_config ⇀ {'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
+      "╟  avg_endpts_perksec_config ⇀ {'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- BravoConfig >\n",
       "╟  EchoConfig ↴ \n",
       "< Configuration Class --- EchoConfig > \n",
       "╓ EchoConfig Parameters:\n",
       "╟  echo010_config ⇀ {'run': False}\n",
-      "╟  echo120_config ⇀ {'run': True, 'x_range': [100, 200], 'y_range': [150, 300]}\n",
+      "╟  echo120_config ⇀ {'run': False, 'x_range': None, 'y_range': None}\n",
       "╟  echo270_config ⇀ {'run': False, 'minimum_value': None}\n",
       "╟  echo271_config ⇀ {'run': False, 'maximum_value': None}\n",
       "╟  echo275_config ⇀ {'run': False, 'top_count': None, 'bottom_count': None}\n",
       "╟  echo276_config ⇀ {'run': False, 'kept_range': None}\n",
+      "╟  echo277_config ⇀ {'run': True, 'sigma_limits': 3}\n",
       "╟  echo380_config ⇀ {'run': False, 'pixel_list': None}\n",
       "╟  echo381_config ⇀ {'run': False, 'x_ranges': None, 'y_ranges': None}\n",
       "╟  echo382_config ⇀ {'run': False, 'column_list': None}\n",
@@ -677,7 +713,7 @@
       "< Configuration Class --- OscarConfig > \n",
       "╓ OscarConfig Parameters:\n",
       "╟  general_heatmap_config ⇀ {'plot': True, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n",
-      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'histogram_plot_paramters': {}}\n",
+      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'histogram_plot_paramters': {}, 'bin_width': 5}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- OscarConfig >\n",
       "╟  YankeeConfig ↴ \n",
@@ -685,6 +721,14 @@
       "╓ YankeeConfig Parameters:\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- YankeeConfig >\n",
+      "╟  ZuluConfig ↴ \n",
+      "< Configuration Class --- ZuluConfig > \n",
+      "╓ ZuluConfig Parameters:\n",
+      "╟  SA201907281826 ⇀ {'early_frame': 3, 'ref_frame': array([17, 32]), 'sub_avg_frames': array([[ 257,  272],\n",
+      "       [ 513,  528],\n",
+      "       [1025, 1040]]), 'frame_exposure': 5}\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- ZuluConfig >\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- SmeargleConfig >\n"
      ]
@@ -703,14 +747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It has finished. A configuration file has been written to ./../test.ifaspkl\n"
+      "It has finished. A configuration file has been written to ./../FirstRun.ifaspkl\n"
      ]
     },
     {
