--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO-170 Gaussian Truncation: Pixels outside of the range $\\left \\{ x \\in \\mathbb{R} | \\mu - k\\sigma \\leq x \\leq \\mu + k\\sigma \\right \\}$ are masked. $k$ is provided by ``sigma_multiple``. The mean and standard deviation values are provided by a Gaussian fit on a histogram."
+    "ECHO-170 Gaussian Truncation: Pixels outside of the range $\\left \\{ x \\in \\mathbb{R} | \\mu - k\\sigma \\leq x \\leq \\mu + k\\sigma \\right \\}$ are masked. $k$ is provided by ``sigma_multiple``. The mean and standard deviation values are provided by a Gaussian fit on a histogram. The values are binned in bin widths of ``bin_size`` when sent to the histogram prior to fitting."
    ]
   },
   {
@@ -244,12 +244,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'run': True, 'sigma_multiple': 2}\n"
+      "{'run': False, 'sigma_multiple': 2}\n"
      ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo170_config  = {'run': True, 'sigma_multiple': 2}\n",
+    "config_class.EchoConfig.echo170_config  = {'run': False, 'sigma_multiple': 2}\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "print(config_class.EchoConfig.echo170_config)"
    ]
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'run': True, 'sigma_limits': 2}\n"
+      "{'run': False, 'sigma_limits': None}\n"
      ]
     }
    ],
@@ -626,12 +626,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plot': True, 'data_array': None, 'bin_width': 5, 'histogram_plot_paramters': {}}\n"
+      "{'plot': True, 'data_array': None, 'bin_width': 10, 'histogram_plot_paramters': {}}\n"
      ]
     }
    ],
    "source": [
-    "histogram_configuration = {'plot':True,'bin_width':5}\n",
+    "histogram_configuration = {'plot':True,'bin_width':10}\n",
     "mpl_histogram_parameters = {}\n",
     "\n",
     "## Post; nihil se mutare | Do not modify below ##\n",
@@ -678,7 +678,7 @@
     "config_class.ZuluConfig.SA201907281826['ref_frame'] = np.array([17,32], dtype=int)\n",
     "config_class.ZuluConfig.SA201907281826['sub_avg_frames'] = np.array([(257,272), (513,528), (1025,1040)])#, (2049,2064), (4097,4112)], dtype=int)\n",
     "config_class.ZuluConfig.SA201907281826['frame_exposure'] = 5\n",
-    "config_class.ZuluConfig.SA201907281826['early_sigma'] = 1"
+    "config_class.ZuluConfig.SA201907281826['early_sigma'] = 10"
    ]
   },
   {
@@ -723,12 +723,12 @@
       "╓ EchoConfig Parameters:\n",
       "╟  echo010_config ⇀ {'run': False}\n",
       "╟  echo120_config ⇀ {'run': False, 'x_range': None, 'y_range': None}\n",
-      "╟  echo170_config ⇀ {'run': True, 'sigma_multiple': 2}\n",
+      "╟  echo170_config ⇀ {'run': False, 'sigma_multiple': 2}\n",
       "╟  echo270_config ⇀ {'run': False, 'minimum_value': None}\n",
       "╟  echo271_config ⇀ {'run': False, 'maximum_value': None}\n",
       "╟  echo275_config ⇀ {'run': False, 'top_count': None, 'bottom_count': None}\n",
       "╟  echo276_config ⇀ {'run': False, 'kept_range': None}\n",
-      "╟  echo277_config ⇀ {'run': True, 'sigma_limits': 2}\n",
+      "╟  echo277_config ⇀ {'run': False, 'sigma_limits': None}\n",
       "╟  echo380_config ⇀ {'run': False, 'pixel_list': None}\n",
       "╟  echo381_config ⇀ {'run': False, 'x_ranges': None, 'y_ranges': None}\n",
       "╟  echo382_config ⇀ {'run': False, 'column_list': None}\n",
@@ -741,7 +741,7 @@
       "< Configuration Class --- OscarConfig > \n",
       "╓ OscarConfig Parameters:\n",
       "╟  general_heatmap_config ⇀ {'plot': True, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n",
-      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'bin_width': 5, 'histogram_plot_paramters': {}}\n",
+      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'bin_width': 10, 'histogram_plot_paramters': {}}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- OscarConfig >\n",
       "╟  YankeeConfig ↴ \n",
@@ -754,7 +754,7 @@
       "╓ ZuluConfig Parameters:\n",
       "╟  SA201907281826 ⇀ {'early_frame': 3, 'ref_frame': array([17, 32]), 'sub_avg_frames': array([[ 257,  272],\n",
       "       [ 513,  528],\n",
-      "       [1025, 1040]]), 'frame_exposure': 5, 'early_sigma': 1}\n",
+      "       [1025, 1040]]), 'frame_exposure': 5, 'early_sigma': 10}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- ZuluConfig >\n",
       "╙------------------------------------------\n",
