Fixed a few errors and issues with the modeling function.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -244,12 +244,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'run': False, 'sigma_multiple': 2}\n"
+      "{'run': True, 'sigma_multiple': 5, 'bin_size': 5}\n"
      ]
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo170_config  = {'run': False, 'sigma_multiple': 2}\n",
+    "config_class.EchoConfig.echo170_config  = {'run': True, 'sigma_multiple': 5, 'bin_size':5}\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "print(config_class.EchoConfig.echo170_config)"
    ]
@@ -535,7 +535,7 @@
     }
    ],
    "source": [
-    "config_class.EchoConfig.echo399_config\n",
+    "config_class.EchoConfig.echo399_config = {'run':False}\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "print(config_class.EchoConfig.echo399_config)"
    ]
@@ -626,12 +626,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plot': True, 'data_array': None, 'bin_width': 10, 'histogram_plot_paramters': {}}\n"
+      "{'plot': True, 'data_array': None, 'bin_width': 5, 'histogram_plot_paramters': {}}\n"
      ]
     }
    ],
    "source": [
-    "histogram_configuration = {'plot':True,'bin_width':10}\n",
+    "histogram_configuration = {'plot':True,'bin_width':5}\n",
     "mpl_histogram_parameters = {}\n",
     "\n",
     "## Post; nihil se mutare | Do not modify below ##\n",
@@ -723,7 +723,7 @@
       "╓ EchoConfig Parameters:\n",
       "╟  echo010_config ⇀ {'run': False}\n",
       "╟  echo120_config ⇀ {'run': False, 'x_range': None, 'y_range': None}\n",
-      "╟  echo170_config ⇀ {'run': False, 'sigma_multiple': 2}\n",
+      "╟  echo170_config ⇀ {'run': True, 'sigma_multiple': 5, 'bin_size': 5}\n",
       "╟  echo270_config ⇀ {'run': False, 'minimum_value': None}\n",
       "╟  echo271_config ⇀ {'run': False, 'maximum_value': None}\n",
       "╟  echo275_config ⇀ {'run': False, 'top_count': None, 'bottom_count': None}\n",
@@ -741,7 +741,7 @@
       "< Configuration Class --- OscarConfig > \n",
       "╓ OscarConfig Parameters:\n",
       "╟  general_heatmap_config ⇀ {'plot': True, 'data_array': None, 'heatmap_plot_parameters': {}, 'colorbar_plot_paramters': {}}\n",
-      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'bin_width': 10, 'histogram_plot_paramters': {}}\n",
+      "╟  general_histogram_config ⇀ {'plot': True, 'data_array': None, 'bin_width': 5, 'histogram_plot_paramters': {}}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- OscarConfig >\n",
       "╟  YankeeConfig ↴ \n",
@@ -791,7 +791,7 @@
      "text": [
       "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
       "  import sys\n",
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:220: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:221: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
       "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
      ]
     }
