Added functionalized debugging to the modules (in a similar way to how informational messages are done).

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -63,7 +63,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_main.py:54: ImportingWarning: The configuration file could not be properly read. Consider using the factory function. A blank configuration class has been provided instead.\n",
+      "  smeargle_warning(ImportingWarning,(\"The configuration file could not be \"\n"
+     ]
+    }
+   ],
    "source": [
     "## Toto partem non mutant | Do not modify all ##\n",
     "config_class = ifas.yankee.SmeargleConfig(configuration_file_name)"
@@ -757,6 +766,11 @@
       "       [1025, 1040]]), 'frame_exposure': 5, 'early_sigma': 5}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- ZuluConfig >\n",
+      "╟  BaseConfig ↴ \n",
+      "< Configuration Class --- BaseConfig > \n",
+      "╓ BaseConfig Parameters:\n",
+      "╙------------------------------------------\n",
+      "</ Configuration Class --- BaseConfig >\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- SmeargleConfig >\n"
      ]
@@ -775,14 +789,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It has finished. A configuration file has been written to ./../FirstRun.ifaspkl\n"
+      "IFAS Info: It has finished. A configuration file has been written to ./../FirstRun.ifaspkl\n"
      ]
     },
     {
@@ -791,7 +805,7 @@
      "text": [
       "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
       "  import sys\n",
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:220: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:277: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
       "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
      ]
     }
@@ -809,10 +823,17 @@
     "    final_name = configuration_file_name\n",
     "    config_class.write_to_file(configuration_file_name, overwrite=overwrite)\n",
     "finally:\n",
-    "    print(\"It has finished. A configuration file has been written to {file_name}\".format(\n",
+    "    ifas.meta.smeargle_info(\"It has finished. A configuration file has been written to {file_name}\".format(\n",
     "        file_name=final_name))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
