The dark current over voltage plot has been added in its glory. There is still a modeling issue that needs to be sussed out.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -110,6 +110,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Data file sanitization is important to ensure that oddities beyond the data and pipelines itself are handled by excluding the entire data file. These should only be reserved for cases where an ECHO filter cannot or should not be applied. These sanitization methods destroy data, and should only be used on data that should be destoryed. The following sanitization methods exist.\n",
+    "\n",
+    "* **Same File Size** (``same_file_size_sanitization``): This method tests all of the data files, expecting a specific size. The specific file size defaults to be the largest sized file. Any data file that is not the correct exact file size (in bytes) is deleted.\n",
+    "\n",
+    "A log file containing all of the data file names are recorded and written in the same data directory as the data files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_class.BravoConfig.same_file_size_sanitization_config = {'method': None}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Detector bias voltage pattern renaming: It is common to have many sets taken across some voltage variation. Defining the pattern (and assuming the pattern matches with the transitions of voltage) the files can be renamed to something more helpful."
    ]
   },
@@ -136,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It does not serve well to use the entire array for analysis, the `start_chunk` range of frames from the beginning and the `end_chunk` range of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. ``frame_exposure_time`` is the number of seconds each frame is taken for.\n",
+    "It does not serve well to use the entire array for analysis, the `start_chunk` range of frames from the beginning and the `end_chunk` range of frames from the end are combined in such a way to produce a single fits image, from the cube or other data structure, for analysis. The ``frame_exposure_time`` parameter in the time divided forms of the frame averaging is the number of seconds each frame is taken for. If multiple slices are desired, it is best to use the auto-slicing method; the slices are denoted by an array of slice ranges (the averaging function must be passed too).\n",
     "\n",
     "The same parameters are passed to the kilosecond version (the time conversion is handled natively, mutating the frame_exposure_time component from per second to  per kilosecond)."
    ]
@@ -156,10 +176,14 @@
     }
    ],
    "source": [
+    "config_class.BravoConfig.auto_avg_slicing_config\n",
+    "config_class.BravoConfig.avg_endpoints_config\n",
     "config_class.BravoConfig.avg_endpts_persec_config\n",
     "\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)\n",
+    "print(config_clasd.BravoConfig.auto_avg_slicing_config)\n",
+    "print(config_class.BravoConfig.avg_endpoints_config)\n",
     "print(config_class.BravoConfig.avg_endpts_persec_config)\n",
     "print(config_class.BravoConfig.avg_endpts_perksec_config)"
    ]
