--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -119,11 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "config_class.BravoConfig.same_file_size_sanitization_config = {'method': None}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Renaming based on the file order number and the data set that the data file belongs to. This renaming relies on the assumption that the files are listed alphabetically in the order that they were taken. Given that all files generally use timestamps as their name, this is not a far assumption."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_class.BravoConfig.number_rename_config = {'begin_garbage':1}\n",
+    "config_class.BravoConfig.set_determine_rename_config = {'set_length':14,'begin_garbage':1}"
    ]
   },
   {
@@ -135,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,13 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'reference_chunk': None, 'split_chunks': None, 'averaging_function': None}\n",
+      "{'start_chunk': None, 'end_chunk': None}\n",
       "{'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
       "{'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n"
      ]
@@ -182,7 +201,7 @@
     "\n",
     "## Ne mutatus sum ego | Do not modify after ##\n",
     "config_class.BravoConfig.avg_endpts_perksec_config = copy.deepcopy(config_class.BravoConfig.avg_endpts_persec_config)\n",
-    "print(config_clasd.BravoConfig.auto_avg_slicing_config)\n",
+    "print(config_class.BravoConfig.auto_avg_slicing_config)\n",
     "print(config_class.BravoConfig.avg_endpoints_config)\n",
     "print(config_class.BravoConfig.avg_endpts_persec_config)\n",
     "print(config_class.BravoConfig.avg_endpts_perksec_config)"
@@ -209,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +756,12 @@
       "< Configuration Class --- BravoConfig > \n",
       "╓ BravoConfig Parameters:\n",
       "╟  detector_name ⇀ {'name': 'SAPHIRA'}\n",
+      "╟  same_file_size_sanitization_config ⇀ {'method': None}\n",
+      "╟  number_rename_config ⇀ {'begin_garbage': 1}\n",
+      "╟  set_determine_rename_config ⇀ {'set_length': 14, 'begin_garbage': 1}\n",
       "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'begin_garbage': 1, 'archive_data': True}\n",
+      "╟  auto_avg_slicing_config ⇀ {'reference_chunk': None, 'split_chunks': None, 'averaging_function': None}\n",
+      "╟  avg_endpoints_config ⇀ {'start_chunk': None, 'end_chunk': None}\n",
       "╟  avg_endpts_persec_config ⇀ {'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
       "╟  avg_endpts_perksec_config ⇀ {'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
       "╙------------------------------------------\n",
@@ -804,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +844,7 @@
      "text": [
       "C:\\Users\\Tripp\\.conda\\envs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:7: InputWarning: The alternate name is not valid, defaulting to the normal configuration file name.\n",
       "  import sys\n",
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:340: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\yankee\\yankee_functions.py:353: OverwriteWarning: There exists a file with the provided name. Overwrite is true; the previous file will be replaced as provided.\n",
       "  smeargle_warning(OverwriteWarning,(\"There exists a file with the provided name. \"\n"
      ]
     }
