General bug fixes and updates.

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -1176,28 +1176,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:78: InputWarning: The data array file is indicated to return a blank one. Doing so as requested.\n",
+      "  smeargle_warning(InputWarning,(\"The data array file is indicated to return a blank \"\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:101: InputWarning: There is no configuration class provided for this array. The attribute will be None. The SmargleConfig class will be the default.\n",
+      "  smeargle_warning(InputWarning,(\"There is no configuration class provided for this \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = ifas.zulu.IfasDataArray(None, blank=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  -8., -128.,   -5., ...,  -18.,  -17.,  -16.],\n",
-       "       [ -17.,    0.,    2., ...,  -13.,  -27.,  -22.],\n",
-       "       [ -12., -128.,  -11., ...,  -19.,  -15.,  -15.],\n",
-       "       ...,\n",
-       "       [  -8.,    0.,   -7., ...,   -5.,   -6.,   -5.],\n",
-       "       [ -11.,    0.,    2., ...,    3.,    6.,    4.],\n",
-       "       [  -7.,    0.,   -2., ...,    1.,   -3.,   -8.]], dtype=float32)"
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '_echo_functionality',\n",
+       " '_oscar_functionality',\n",
+       " '_yankee_functionality',\n",
+       " '_zulu_determine_configuration_parameters',\n",
+       " 'echo010_fixing_invalids',\n",
+       " 'echo120_subarray_mask',\n",
+       " 'echo170_gaussian_truncation',\n",
+       " 'echo270_minimum_cut',\n",
+       " 'echo271_maximum_cut',\n",
+       " 'echo275_pixel_truncation',\n",
+       " 'echo276_percent_truncation',\n",
+       " 'echo277_sigma_truncation',\n",
+       " 'echo380_single_pixels',\n",
+       " 'echo381_rectangle_mask',\n",
+       " 'echo382_column_mask',\n",
+       " 'echo383_row_mask',\n",
+       " 'echo398_nothing',\n",
+       " 'echo399_everything',\n",
+       " 'echo_execution',\n",
+       " 'echo_numpy_masked_array',\n",
+       " 'echo_synthesize_mask_dictionary',\n",
+       " 'fast_forward_configuration',\n",
+       " 'overwrite_configuration',\n",
+       " 'plot_array_heatmap_image',\n",
+       " 'plot_array_histogram',\n",
+       " 'plot_single_heatmap_and_histogram',\n",
+       " 'print_configuration',\n",
+       " 'read_configuration',\n",
+       " 'write_configuration']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diff"
+    "[method_name for method_name in dir(test)\n",
+    "                  if callable(getattr(test, method_name))]"
    ]
   },
   {
